Test changes. Need to roll back bunch of changes from css and index

--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -13,7 +13,6 @@
     <title>Varidish</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
-
     <link rel="stylesheet" href="assets/css/varidish.css">
 
 
@@ -99,6 +98,9 @@
         <div class="st-content">
             <div class="st-content-inner">
                 <div class="vari-wrap">
+                    <div id="logged-in-wrap" class="logged-in-wrap">
+                         
+                    </div>
 
                     <div class="vari-head-wrap">
                         <div class="vari-head">
@@ -114,6 +116,7 @@
 
                             <div class="btn" id="st-trigger-effects">
                                 <button class="login" data-effect="st-effect-1">Log In</button>
+                                <button class="signup" id="logout-button">logout</button>
                                 <button class="signup">Sign up</button>
                                 <button class="reg" data-effect="st-effect-2">Reg. Your Restaurant
                                 </button>
